After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 778529 - American cuisine category disappeared in 0.12.0
American cuisine category disappeared in 0.12.0
Status: RESOLVED FIXED
Product: recipes
Classification: Other
Component: general
0.12.x
Other Linux
: Normal normal
: ---
Assigned To: Recipes maintainer(s)
Recipes maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-02-12 13:37 UTC by Jeremy Bicha
Modified: 2017-02-12 16:33 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jeremy Bicha 2017-02-12 13:37:14 UTC
Ubuntu GNOME 17.04 Alpha

When I upgraded from 0.10.0 to 0.12.0, I noticed that American no longer appears in the Cuisines page. I'm reporting a bug in case that was not intentional.