Make sure we don't skip the wrong cuisine

I was trying to be needlessly efficient here, and ended
up skipping the american cuisine in most cases. Just compare
the strings.

https://bugzilla.gnome.org/show_bug.cgi?id=778529